Fixed the blurb text not showing and removed bottom curve

--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -46,7 +46,7 @@ body {
 
 .contact-us .content {
     width: 980px;
-    padding: 0 30px 0 0;
+    padding: 0 30px 100px 0;
 
 
 }
